--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MatchHistoryAdapter"
-            android:label="@string/title_activity_match_history_adapter"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".matchHistry"
-            android:label="@string/title_activity_match_histry"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name=".MatchHistoryActivity"
+            android:label="@string/title_activity_match_histry"
+            android:theme="@style/AppTheme.NoActionBar" >  <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
